# mr76_radar_ros2_driver

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/: mr76_node.h  serial2can_node.h
launch/: cocontroller_usv.launch.py  mr76_radar_ros2_driver.launch.py
mr76_radar/: mr76.cpp  mr76.h  radar.cpp.txt  radar.h.txt  radar_common.h  radar_params.h
scripts/: cocontroller_usv.rules  create_udev_cocontroller_usv_rules.sh  create_udev_serial2can_NiRen_rules.sh  delete_udev_serial2can_NiRen_rules.sh  serial2can.rules
serial2can/: CMakeLists.txt  auto_build.sh  gens_cpptemplate.py  gens_ctemplate.py  linux_demo.cpp  log_module.cpp  log_module.h  serial2can_interface.cpp  serial2can_interface.h  serial_interface_linux.cpp  serial_interface_linux.h
src/: mr76_node.cpp  serial2can_node.cpp
